Fixed the image locations in css and other small amends

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           <li class="header-nav__list-item"><a class="header-nav__link" href="/">Careers</a></li>
         </ul>
       </nav>
-      <button class="header__toggle-btn header__toggle-btn--hamburger" id="htb"></button>
+      <button class="header__toggle-btn header__toggle-btn--hamburger" id="htb">
+        <!-- <img src="./images/icon-close.svg" alt=""> -->
+      </button>
       <button class="btn btn--header">Request Invite</button>
       <section class="modal modal--inactive" id="modal">
         <nav class="modal-nav">
@@ -46,7 +48,8 @@
     <section class="hero">
       <img class="hero_img" src="images/image-mockups.png">
       <section class="hero_text">
-        <h1 class="hero_header">Next generation digital banking</h1>
+        <h1 class="hero_header">Next generation <br>
+          digital banking</h1>
         <p class="hero_copy">Take your financial life online. Your Easybank account will be a one-stop shop for
           spending, saving, budgeting, investing, and much more.</p>
         <button class="btn">Request Invite</button>
@@ -99,7 +102,7 @@
     <section class="articles">
       <h1 class="articles__header">Latest Articles</h1>
       <article class="articles-card">
-        <img src="images/image-currency.jpg" class="articles-card__img">
+        <img src="/images/image-currency.jpg" class="articles-card__img">
         <div class="articles-card__content">
           <p class="articles-card__byline">By Claire Robinson</p>
           <h2 class="articles-card__title">Receive money in any currency with no fees</h2>
@@ -108,7 +111,7 @@
         </div>
       </article>
       <article class="articles-card">
-        <img src="images/image-restaurant.jpg" class="articles-card__img">
+        <img src="/images/image-restaurant.jpg" class="articles-card__img">
         <div class="articles-card__content">
           <p class="articles-card__byline"> By Wilson Hutton</p>
           <h2 class="articles-card__title"> Treat yourself without worrying about money</h2>
@@ -118,7 +121,7 @@
       </article>
 
       <article class="articles-card">
-        <img src="images/image-plane.jpg" class="articles-card__img">
+        <img src="/images/image-plane.jpg" class="articles-card__img">
         <div class="articles-card__content">
           <p class="articles-card__byline">By Wilson Hutton</p>
           <h2 class="articles-card__title"> Take your Easybank card wherever you go</h2>
@@ -129,7 +132,7 @@
       </article>
 
       <article class="articles-card">
-        <img src="images/image-confetti.jpg" class="articles-card__img">
+        <img src="/images/image-confetti.jpg" class="articles-card__img">
         <div class="articles-card__content">
           <p class="articles-card__byline"> By Claire Robinson</p>
           <h2 class="articles-card__title"> Our invite-only Beta accounts are now live!</h2>
@@ -142,7 +145,7 @@
 
     <footer>
       <div class="footer__logo-socials">
-        <img src="images/logo.svg" class="footer__logo">
+        <img src="/images/logo.svg" class="footer__logo">
         <ul class="footer__social">
           <li class="footer__social-icon"><a href=""><img src="images/icon-facebook.svg"></a></li>
           <li class="footer__social-icon"><a href=""><img src="images/icon-youtube.svg"></a></li>
@@ -167,6 +170,7 @@
         <p class="footer__copyright"> © Easybank. All Rights Reserved </p>
       </div>
     </footer>
+    <script src="./script.js"></script>
   </body>
 
 </html>
