Fixed  locations images for feature articles

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <section class="articles">
       <h1 class="articles__header">Latest Articles</h1>
       <article class="articles-card">
-        <img src="/images/image-currency.jpg" class="articles-card__img">
+        <img src="images/image-currency.jpg" class="articles-card__img">
         <div class="articles-card__content">
           <p class="articles-card__byline">By Claire Robinson</p>
           <h2 class="articles-card__title">Receive money in any currency with no fees</h2>
@@ -111,7 +111,7 @@
         </div>
       </article>
       <article class="articles-card">
-        <img src="/images/image-restaurant.jpg" class="articles-card__img">
+        <img src="images/image-restaurant.jpg" class="articles-card__img">
         <div class="articles-card__content">
           <p class="articles-card__byline"> By Wilson Hutton</p>
           <h2 class="articles-card__title"> Treat yourself without worrying about money</h2>
@@ -121,7 +121,7 @@
       </article>
 
       <article class="articles-card">
-        <img src="/images/image-plane.jpg" class="articles-card__img">
+        <img src="images/image-plane.jpg" class="articles-card__img">
         <div class="articles-card__content">
           <p class="articles-card__byline">By Wilson Hutton</p>
           <h2 class="articles-card__title"> Take your Easybank card wherever you go</h2>
@@ -132,7 +132,7 @@
       </article>
 
       <article class="articles-card">
-        <img src="/images/image-confetti.jpg" class="articles-card__img">
+        <img src="images/image-confetti.jpg" class="articles-card__img">
         <div class="articles-card__content">
           <p class="articles-card__byline"> By Claire Robinson</p>
           <h2 class="articles-card__title"> Our invite-only Beta accounts are now live!</h2>
